--- a/packages.config
+++ b/packages.config
@@ -13,8 +13,9 @@
   <package id="Microsoft.Bcl.AsyncInterfaces" version="5.0.0" targetFramework="net472" />
   <package id="Microsoft.ReportingServices.ReportViewerControl.Winforms" version="150.1652.0" targetFramework="net472" />
   <package id="Microsoft.SqlServer.Types" version="14.0.314.76" targetFramework="net472" />
-  <package id="MySql.Data" version="9.1.0" targetFramework="net472" />
+  <package id="MySql.Data" version="9.2.0" targetFramework="net472" />
   <package id="MySql.Data.EntityFramework" version="9.1.0" targetFramework="net472" />
+  <package id="MySqlBackup.NET" version="2.3.9" targetFramework="net472" />
   <package id="System.Buffers" version="4.5.1" targetFramework="net472" />
   <package id="System.Configuration.ConfigurationManager" version="8.0.0" targetFramework="net472" />
   <package id="System.Diagnostics.DiagnosticSource" version="8.0.1" targetFramework="net472" />
